# webppt

./: .gitattributes  .gitignore  BUILD.md  BUILD_WINDOWS.md  CAROUSEL_ERROR_FIX.md  CREATE_ELECTRON.md  DEPLOYMENT.md  DOCS_SUMMARY.md  ELECTRON_DEPLOYMENT.md  ELECTRON_README.md  FINAL_FIX_SUMMARY.md  FULLSCREEN_MENU_HIDE.md  HEADER_LAYOUT_FIX.md  INTERACTION_FIX_COMPLETE.md  LOGO_FIX_COMPLETE.md  OVERLAY_FIX_COMPLETE.md  PATH_FIX_COMPLETE.md  README.md  build-electron.bat  build-electron.ps1  build-electron.sh  build-portable.ps1  build.bat  debug.html  electron-builder.json  index.html  package-simple.json  package.json  pdf-viewer.html  pyproject.toml  server.py  simple-test.html  start-app.sh  test-compatibility.html  test-complete-functionality.html  test-header-layout.html  test-layout.html  test-news-direct.html  test-news-links.html  test-news-parsing.html  (+2 more)
assets/: .gitignore
css/: style.css
docs/: PDF_CAROUSEL_FEATURE.md  PDF_FILL_OPTIMIZATION.md  WEB.md  web_page_design.md
docs/json/: office_files.json
electron/: main.js  preload.js
js/: carousel.js  data.js  main.js  navigation.js  pdf-preview.js
scripts/: generate_icons.py  scan_assets.py  scan_assets_to_json_index.py  scan_wps_to_txt_converter.py  wps_to_txt_converter.py
