[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webppt"
version = "0.1.0"
description = "Web PowerPoint Robot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.ruff]
# 设置行长度
line-length = 88

# 设置目标 Python 版本
target-version = "py38"

# 包含的文件类型
extend-include = ["*.ipynb"]

# 排除的目录
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "Q",   # flake8-quotes
]

# 忽略的规则
ignore = [
    "E501",  # 行长度由 black/ruff formatter 处理
    "S101",  # 允许使用 assert
    "T201",  # 允许使用 print
    "B008",  # 允许在函数参数中使用函数调用
]

# 每个文件允许的自动修复
fixable = ["ALL"]
unfixable = []

# 允许自动删除未使用的导入
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# 测试文件中允许更多的规则忽略
"tests/**/*" = ["S", "N", "SIM"]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
# 使用双引号
quote-style = "double"

# 缩进类型
indent-style = "space"

# 保留 magic trailing comma
skip-magic-trailing-comma = false

# 行结束符
line-ending = "auto"

[tool.ruff.lint.isort]
# isort 配置
known-first-party = ["webppt"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
# 复杂度检查
max-complexity = 10

[tool.ruff.lint.pyupgrade]
# 保持运行时引用的 typing
keep-runtime-typing = true
